--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ h1 {
 h2 {
     color: #4a4a4a;
     margin-bottom: 3em;
-    padding: .2em;
+    padding: .2em .2em;
     font-size: 2em;
     font-weight: 800;
 }
