--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,14 @@ body {
 }
 
 h1 {
-    color: #131313;
+    color: #202020;
     margin-top: 2em;
     padding: 0 .5em;
     font-family: Big Shoulders Stencil Display;
     font-size: 4em;
     font-weight: 900;
     word-spacing: .1em;
-    text-shadow: .03em -.03em #979797
+    text-shadow:  2px -2px 4px #979797
 }
 
 h2 {
@@ -43,6 +43,7 @@ h2 a{
 .telegram a{
     background-color: #0088cc;
     color: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-weight: 800;
     text-decoration: none;
     padding-bottom: .5em;
@@ -57,6 +58,7 @@ h2 a{
 .github a{
     background-color: #6e5494;
     color: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-weight: 800;
     text-decoration: none;
     padding: .2em .5em;
@@ -71,9 +73,9 @@ img {
     margin: 0 .3em -.3em 0;
 }
 
-
 a:hover{
     color: #414141;
 }
+
 
 /* by: t.me/yehuda100 */
